; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_dumper_close.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_dumper_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_internal = type { i64, i32* }

@CONTROL_TRUE = common dso_local global i64 0, align 8
@CONTROL_FALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demux_internal*)* @dumper_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dumper_close(%struct.demux_internal* %0) #0 {
  %2 = alloca %struct.demux_internal*, align 8
  store %struct.demux_internal* %0, %struct.demux_internal** %2, align 8
  %3 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %4 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %9 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @mp_recorder_destroy(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %14 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %16 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @CONTROL_TRUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %12
  %21 = load i64, i64* @CONTROL_FALSE, align 8
  %22 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %23 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %22, i32 0, i32 0
  store i64 %21, i64* %23, align 8
  br label %24

24:                                               ; preds = %20, %12
  ret void
}

declare dso_local i32 @mp_recorder_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
